<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <Button
        android:id="@+id/btnHowToPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="viewTutorial"
        android:text="@string/how_to_play" />

    <TextView
        android:id="@+id/tvTutorial"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:text="@string/tutorial"/>

    <Button
        android:id="@+id/btnChangeLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="viewLanguage"
        android:text="@string/change_language" />

    <TextView
        android:id="@+id/tvLanguage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:text="@string/language"/>

    <Button
        android:id="@+id/btnChangeDifficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="viewDifficulty"
        android:text="@string/change_difficulty" />

    <TextView
        android:id="@+id/tvDifficulty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:text="@string/difficulty"/>

</LinearLayout>