<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.vebovs.tetris.GameView
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="521dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLeft"
            android:layout_width="137dp"
            android:layout_height="80dp"
            android:text="@string/left"
            android:onClick="Left"/>

        <Button
            android:id="@+id/btnRotate"
            android:layout_width="137dp"
            android:layout_height="80dp"
            android:text="@string/rotate"
            android:onClick="Rotate"/>

        <Button
            android:id="@+id/btnRight"
            android:layout_width="137dp"
            android:layout_height="80dp"
            android:text="@string/right"
            android:onClick="Right"/>

    </LinearLayout>

</LinearLayout>